@@ -70,6 +70,26 @@
                 </code>
            </summary>
             <bugs>
+                <bug id="1626" tool="jira">
+                    <description>
+		                Added Code generation sample to HTML documentation            
+                    </description>
+                    <contributor>
+                        <name>Werner Guttmann</name>
+                        <email>werner.guttmann@gmx.net</email>
+                    </contributor>
+                    <submitter>
+                        <name>Werner Guttmann</name>
+                        <email>werner.guttmann@gmx.net</email>
+                    </submitter>
+                    <reporter>
+                        <name>Werner Guttmann</name>
+                        <email>werner.guttmann@gmx.net</email>
+                    </reporter>
+                    <type>Enh.</type>
+                    <module>XML</module>
+                    <date>20061016</date>
+                </bug>
                 <bug id="1621" tool="jira">
                     <description>
 		                Backported Castor to Java 1.3 compatibility: JDBC 3.0.
